--- a/summary.tex
+++ b/summary.tex
@@ -8,7 +8,7 @@
 
 {\em Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} \textbf{Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}
 
-
+{\small
 Эксплуатация современного автомобиля тесно связана с использованием разобщённых информационных ресурсов, предоставляющих водителю и пассажирам разнообразные услуги и сервисы. 
 
 Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть. Целью создания такой сети являются повышение безопасности и комфорта участников дорожного движения.
@@ -25,9 +25,8 @@
 
 Основным средством исследования поведения mesh сетей является имитационное моделирование, позволяющее выполнять различные сценарии поведения mesh сетей, не прибегая к реализации натурного эксперимента. В рамках данной работы была разработана модель автомобильной mesh сети, реализованной на основе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3.
 
-
-
 Результатом представленной работы стала серия экспериментов, позволяющих оценить поведения автомобильных mesh сетей в зависимости от свойств сетевого трафика, характеристик дорожной сети и особенностей организации дорожного движения.
+}
 
 \newpage
 
