Добавлено введение, исключены картинка и текст после редактирования раздела и оставшихся изображений будет 20 страниц.

--- a/auto.tex
+++ b/auto.tex
@@ -1,29 +1,26 @@
-{\bf{\SetMySection}Автомобильные телекоммуникационные сервисы.} 
-Перспективные направления предоставления информационных услуг в автомобильных mesh-сетях базируются на облачно--ориентированных системах. 
-Примером таких систем служит система SYNC\cite{Ford.co.uk}, которая используется компанией ФОРД.
-
-
-Водители и пассажиры автомобилей становятся потребителями индивидуальных сервисов, предоставляемых облачной средой, в частности:
+{\bf{\SetMySection}Автомобильные телекоммуникационные сервисы.}
+Водители и пассажиры легковых и грузовых автомобилей являются потребителями  сервисов, которые можно классифицировать как средства:
 
 \begin{enumerate}
 
-\item Мониторинг технического состояния автомобилей и сокращение числа обращений в сервисные центры;
+\item мониторинга технического состояния автомобилей;
 
-\item упрощение финансовых расчётов клиентов компании при эксплуатации автомобиля;
+\item осуществления финансовых расчётов при эксплуатации автомобиля;
 
-\item комплексное решение эксплуатационных и транспортных задач;
+\item комплексного решения эксплуатационных и транспортных задач;
 
-\item расширение области информационно-развлекательных услуг;
+\item предоставления информационно-развлекательных услуг;
 
-\item мониторинг обстановки на трассе движения и оперативная помощь в сложных или аварийных ситуациях.
+\item мониторинга обстановки на трассе движения; 
+
+\item оперативной помощи в сложных или аварийных ситуациях.
 
 \end{enumerate}
 
-Реализация этих возможностей создаёт дополнительные удобства водителям и пассажирам автомобилей.
+% Реализация этих возможностей создаёт дополнительные удобства водителям и пассажирам автомобилей и п.
+%Новые возможности реализуются в среде облачных вычислений с использованием беспроводного подключения встроенного оборудования к облачной среде.
 
-Новые возможности реализуются в среде облачных вычислений с использованием беспроводного подключения встроенного оборудования к облачной среде.
-
-{\bf{\SetMySubSection} Категории абонентов информационных услуг.} Потребителями информационных услуг разделяется на несколько категорий абонентов, в первую категорию попадают облачные службы, предоставляющие непосредственно услуги водителям, во вторую - сами участники движения: водители и пассажиры автомобилей, в третью - элементы дорожной инфраструктуры и специальные транспортные средства. 
+{\bf{\SetMySubSection} Категории абонентов информационных услуг.} Потребителями информационных услуг подразделяются на несколько категорий абонентов, в первую категорию попадают облачные службы, предоставляющие непосредственно услуги водителям, во вторую - сами участники движения: водители и пассажиры автомобилей, в третью - элементы дорожной инфраструктуры и специальные транспортные средства. 
 
 %\begin{itemize}
 
@@ -111,7 +108,7 @@
 
 \end{itemize}
 
-Большие объемы данных характерны для: 
+Большие объёмы данных характерны для: 
 
 \begin{itemize}
 
@@ -125,4 +122,4 @@
 
 \end{itemize}
 
-Данная классификация показывает, что для наиболее приоритетных сообщений, определяющих безопасность движения, характерны малые объемы. Кроме этого одна часть данных этой категории предназначена для региональных служб, а другая для удаленных пользователей.
+Данная классификация показывает, что для наиболее приоритетных сообщений, определяющих безопасность движения, характерны малые объёмы. Кроме этого одна часть данных этой категории предназначена для региональных служб, а другая для удалённых пользователей.
