--- a/cloud.tex
+++ b/cloud.tex
@@ -2,16 +2,16 @@
  
 Большинство авторов не рассматривают ситуации, в которых отсутствует непрерывная связь со стационарными ретрансляторами, когда непосредственная передача данных невозможна. В тоже время, если рассматривать каждый автомобиль в качестве подвижного ретранслятора, то обмен сообщениями с облачной средой можно обеспечить путём ретрансляции сообщений через них. При наличии набора точек доступа к облачной среде (к облаку) возникает альтернатива выбора точки передачи сообщений в облачную среду. Сегодня, для построения пути доступа к облачной среде используются классические алгоритмы поиска маршрутов mesh сетях\cite{Narra:2011:DDV:2151054.2151132}, которые предполагают поиск единственного маршрута до единственного заранее известного адресата. В случае облачно--ориентированного сервиса требуется осуществить выбор наиболее перспективного узла из нескольких альтернативных. Для этого необходимо выявить доступные узлы с выходом в облачную среду и оценить перспективность передачи и приёма данных через них. 
 
-\begin{figure}[!ht]
+%\begin{figure}[!ht]
 % \vspace{-0.2cm}
- \centering{
- \epsfig{file = connect.eps, width = 8cm}
- \caption{Схема взаимодействия объектов однораноговой гетерогенной сети с облачной инфраструктурой.}
- \label{fig:connect}}
+% \centering{
+% \epsfig{file = connect.eps, width = 8cm}
+% \caption{Схема взаимодействия объектов однораноговой гетерогенной сети с облачной инфраструктурой.}
+% \label{fig:connect}}
 % \vspace{-0.1cm}
-\end{figure}
+%\end{figure}
 
-На рисунке~\ref{fig:connect} приведена схема взаимодействия объектов однораноговой гетерогенной сети с облачной средой.
+%На рисунке~\ref{fig:connect} приведена схема взаимодействия объектов однораноговой гетерогенной сети с облачной средой.
 
 % {\bf{\SetMySubSection} Описание мультипротокольного узла (топология сети).} 
 
