--- a/implementation.tex
+++ b/implementation.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Реализация среды моделирования передачи сообщений в сети автомобилей.} Основным методом исследования является имитационное моделирование работы сети в среде ns-3 (дискретно-событийный симулятор телекоммуникационных систем\cite{Nsnam.org}).
+{\bf{\SetMySection} Реализация среды моделирования передачи сообщений в сети автомобилей.} Основным методом исследования является имитационное моделирование работы сети в среде ns-3 (дискретно-событийный стимулятор телекоммуникационных систем\cite{Nsnam.org}).
  
 Симулятор ns-3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns--3 открыты для исследования, модификации и использования и доступны на сайте проекта\cite{Nsnam.org}. В качестве встроенного языка описания моделей используются: C++ и Python.
 
@@ -52,34 +52,36 @@
  
 Для реализации комбинации беспроводных сетей разработана модель подвижного мультипротокольного узла с набором сетевых интерфейсов. Для реализации мультипротокольного узла добавлен новый класс, позволяющий комбинировать интерфейсы стандартов: 802.11abg, 802.11s, 802.11p, LTE. 
 
-{\bf{\SetMySubSection} Описание мультипротокольного узла в среде моделирования.} Алгоритм создания мультипротокольного узла, обеспечивающего взаимодействие двух сетей, на примере, LTE и mesh (802.11s):
-
-\begin{enumerate}
-
-\item[$-$] создать узлы с интерфейсом 802.11s. (класс NodeContainer);
-
-\item[$-$] задать модель движения узлов LTE (важно это сделать до установки самих UE и eNB интерфейсов);
-
-\item[$-$] создать узлы базовых станций LTE (eNB, метод InstallEnbDevice, класса LteHelper); 
-
-\item[$-$] создать узлы клиентов LTE (UE, метод InstallUeDevice, класса LteHelper);
-
-\item[$-$] создать виртуальный узел "точка-точка", выполняющий роль промежуточного звена для соединения интерфейса LTE и mesh;
-
-\item[$-$] установить интерфейс LTE в mesh узел (метод Add класса NodeContainer);
-
-\item[$-$] создать шлюз для соединения LTE с внешней сетью (метод GetPgwNode класса EpcHelper);
-
-\item[$-$] назначить IP-адреса узлам сети, включая виртуальный узел (метод Assign класса Ipv4InterfaceContainer);
-
-\item[$-$] задать маршрут от выбранного узла к LTE сети, через промежуточный мультипротокольный узел с mesh и LTE (метод AddNetworkRouteTo класса Ipv4StaticRouting);
-
-\item[$-$] установить маршрут по умолчанию на LTE интерфейсах (через шлюз в этой сети, адрес шлюза получается методом GetUeDefaultGatewayAddress класса EpcHelper и устанавливается методом SetDefaultRoute класса Ipv4StaticRouting). 
-
-\end{enumerate}
-
+{\bf{\SetMySubSection} Реализация мультипротокольного узла в среде моделирования.}
 Для проведения эксперимента была создана модель узла позволяющая осуществлять доставку пакетов между мультипротокольными узлами mesh-сети для сетей 802.11s и LTE.
 Такая схема взаимодействия потребовала, дополнительно создания виртуального интерфейса, через который бы происходила маршрутизация между сетями.
+
+% Алгоритм создания мультипротокольного узла, обеспечивающего взаимодействие двух сетей, на примере, LTE и mesh (802.11s):
+
+%\begin{enumerate}
+
+%\item[$-$] создать узлы с интерфейсом 802.11s. (класс NodeContainer);
+
+%\item[$-$] задать модель движения узлов LTE (важно это сделать до установки самих UE и eNB интерфейсов);
+
+%\item[$-$] создать узлы базовых станций LTE (eNB, метод InstallEnbDevice, класса LteHelper); 
+
+%\item[$-$] создать узлы клиентов LTE (UE, метод InstallUeDevice, класса LteHelper);
+
+%\item[$-$] создать виртуальный узел "точка-точка", выполняющий роль промежуточного звена для соединения интерфейса LTE и mesh;
+
+%\item[$-$] установить интерфейс LTE в mesh узел (метод Add класса NodeContainer);
+
+%\item[$-$] создать шлюз для соединения LTE с внешней сетью (метод GetPgwNode класса EpcHelper);
+
+%\item[$-$] назначить IP-адреса узлам сети, включая виртуальный узел (метод Assign класса Ipv4InterfaceContainer);
+
+%\item[$-$] задать маршрут от выбранного узла к LTE сети, через промежуточный мультипротокольный узел с mesh и LTE (метод AddNetworkRouteTo класса Ipv4StaticRouting);
+
+%\item[$-$] установить маршрут по умолчанию на LTE интерфейсах (через шлюз в этой сети, адрес шлюза получается методом GetUeDefaultGatewayAddress класса EpcHelper и устанавливается методом SetDefaultRoute класса Ipv4StaticRouting). 
+
+%\end{enumerate}
+
 %Базовая реализация взаимодействия показана на рисунке~\ref{fig:basic_realisation}.
 
 Модель узла реализующая функцию маршрутизации сообщений между сетями передачи данных 802.11s и LTE показана на рисунке~\ref{fig:multiprotocol_realisation}.
@@ -102,6 +104,8 @@
  \label{fig:multiprotocol_realisation}}
 % \vspace{-0.1cm}
 \end{figure}
+
+Алгоритм инициализации и функционирования мультипротокольного узла приведён в статье ~\cite{Instrumental}.
 
 В процессе моделирования перемещение мультипротокольного подвижного узла осуществляется путем задания параметров схемы движения транспортного средства. Координаты мультипротокольного мобильного узла наследуются от координат транспортного средства. Перемещение узла осуществляется дискретно с интервалом 0.1 секунда, в течение всего периода моделирования.
 
