--- a/authors.tex
+++ b/authors.tex
@@ -3,7 +3,9 @@
 {\footnotesize
 
 \noindent {\bf Глазунов Вадим Валерьевич}~--— аспирант кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). neweagle@gmail.com; СПбГПУ, Политехническая ул., д.~29, г.~Санкт-Петербург, 195251, Россия; р.т. +7(812)552-65-21. Научный руководитель~--- Курочкин~М.\,А.
+
 \vskip 1mm
+
 \noindent\textbf{Glazunov V. Vadim}~—  PhD student of Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. neweagle@gmail.com; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-6521, Scientific advisor~--- Kurochkin~M/\,A.
 
 \vskip 1mm
@@ -22,13 +24,16 @@
 
 \noindent {\bf Michail A. Kurochkin}~--- PhD in Technical Science, Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Computer Graphics, Hhuman Machine Interface, 
 Computer Simulation, Computer Networks. Number of publications --— 130. kurl@ya.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
+
+\vskip 1mm
+
 \noindent {\bf Попов Сергей Геннадьевич}~--- к.т.н.; доцент кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). Область научных интересов:  теория баз данных, системы управления базами данных, управление проектами, проектирование приложений,  компьютерные сети. Число научных публикаций --- 42. popovserge@spbstu.ru; СПбГПУ, Политехническая, д. 29, г. Санкт-Петербург, 195251, РФ; р.т. +7(812)552-65-21. 
 
 \vskip 1mm
 
 \noindent {\bf Serge G. Popov}~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Database Theory, Database Management System, Project Management, Application Development, Computer Networks. Number of publications --— 42. popovserge@spbstu.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
-}
 
 \vskip 1mm
+}
 
 \noindent {\footnotesize  {\bf Поддержка исследований.} Работа выполнена при финансовой поддержке РФФИ, проект № 13-07-12106 офи\_м.}
