--- a/auto.tex
+++ b/auto.tex
@@ -3,17 +3,17 @@
 
 \begin{enumerate}
 
-\item мониторинга технического состояния автомобилей;
+\item[$-$] мониторинга технического состояния автомобилей;
 
-\item осуществления финансовых расчётов при эксплуатации автомобиля;
+\item[$-$] осуществления финансовых расчётов при эксплуатации автомобиля;
 
-\item комплексного решения эксплуатационных и транспортных задач;
+\item[$-$] комплексного решения эксплуатационных и транспортных задач;
 
-\item предоставления информационно-развлекательных услуг;
+\item[$-$] предоставления информационно-развлекательных услуг;
 
-\item мониторинга обстановки на трассе движения; 
+\item[$-$] мониторинга обстановки на трассе движения; 
 
-\item оперативной помощи в сложных или аварийных ситуациях.
+\item[$-$] оперативной помощи в сложных или аварийных ситуациях.
 
 \end{enumerate}
 
