--- a/implementation.tex
+++ b/implementation.tex
@@ -23,12 +23,12 @@
 \end{itemize}
 
 \begin{figure}[!ht]
-% \vspace{-0.2cm}
+\vspace{-10pt}
  \centering{
- \epsfig{file = architecture.eps, width = 6cm}
- \caption{јрхитектура среды моделировани€.}
+\epsfig{file = architecture.eps, width = 6cm}
+\caption{јрхитектура среды моделировани€.}
  \label{fig:architecture}}
-% \vspace{-0.1cm}
+\vspace{-6pt}
 \end{figure}
 
 Ќа рисунке ~\ref{fig:architecture} приведена разработанна€ структура среды модели мультипротокольной сети.
