--- a/biblio.tex
+++ b/biblio.tex
@@ -10,9 +10,9 @@
 
 \bibliography{article_IP}{}
 
-% \bibliographystyle{plain}
+%\bibliographystyle{plain}
 
-% \bibliographystyle{vak}
+\bibliographystyle{vak}
 
 %!!! Msadaa:2010:CSM:1848649.1849209
 %%[1]A Comparative Study between 802.11p and Mobile WiMAX-based V2I Communication Networks Date of Conference: 27-29 July 2010. Msadaa, I.C.
@@ -32,7 +32,7 @@
 %!!! Narra:2011:DDV:2151054.2151132
 %[6] Destination-Sequenced Distance Vector (DSDV) Routing Protocol Implementation in ns-3.  Hemanth Narra, Yufei Cheng, Egemen K. ?etinkaya, Justin P. Rohrer and James P.G. Sterbenz Information and Telecommunication Technology Center Department of Electrical Engineering and Computer Science The University of Kansas, Lawrence, KS 66045, USA
 
-
+%~!!! 
 %[7]	Comparision of performance of routing protocol in Wireless Mesh Network. Nikunj R.Nomulwar, Mrs. VarshaPriya J. N., Dr. B. B. Meshram ,Mr. S. T. Shinghade. The International Journal of Computer Science & Applications (TIJCSA).
 
 %!!! Ford.co.uk,
@@ -43,7 +43,6 @@
 
 %!!! Road
 %[10]	Road Traffic Efficiency and Safety Improvements Trends ICETE 2013, 10th international joint conference on e-business and telecommunications, REYKJAVIK, ICELAND, 29-31 JULY	Курочкин Л. М., Курочкин М. А., Попов С. Г., Тимофеев Д. А.
-
 
 %[11]	Проблемы построения интеллектуальной транспортной сети Сборник материалов международной научно-методической конференции "Высокие интеллектуальные технологии и инновации в национальных исследовательских университетах". - СПб.:Изд-во СПбГПУ, 2013, Том 1, стр. 32-34	Курочкин М. А., Попов С. Г.
 
