--- a/telematics.tex
+++ b/telematics.tex
@@ -58,6 +58,7 @@
 
 Автомобиль (узел сети) содержит различные устройства для подключения к локальным сетям. Подключение осуществляется, используя различные технологии, для получения доступа к необходимым сетевым сервисам и данным.
 
+
 %выкинуть?
 %Первая проблема решается использованием в аппаратуре сетевого оборудования общего набора сетевых стандартов и протоколов передачи данных. Совместимость стандартов обеспечивает устойчивую работу сетей на физическом, канальном и сетевом уровнях модели OSI. Другими словами производители оборудования разрабатывают и используют универсальные реконфигурируемые интерфейсы для доступа как к глобальным и локальным беспроводным сетям.
 
@@ -78,18 +79,18 @@
 Перспективным направлением при передаче коротких сообщений между автомобилями и дорожной инфраструктурой является беспроводная технология соединения с автомобилями --- DSRC. 
 В настоящее время стационарные передатчики дорожной инфраструктуры предназначены для трансляции на борт транспортного средства сообщений о дорожной обстановке. 
 Они позволяют информировать водителей транспортных средств и дорожную инфраструктуру о состоянии светофоров и дорожных знаков, фактах сокращения дистанций и интервалов между транспортными средствами, наличии заторов и инцидентов на дороге. 
+ 
+\begin{figure}[!ht]
+\vspace{-10pt}
+ \centering{
+ \epsfig{file = ERA_GLONASS.eps, width = 8cm}
+ \caption{Траектории передачи сообщений в мультипротокольной мобильной сети.}
+ \label{fig:ERA_GLONASS}}
+ \vspace{-6pt}
+\end{figure}
+
 Преимуществом технологии является короткое время соединения между стационарными и подвижными передатчиками, высокая скорость передачи данных и поддержание стабильного соединения с транспортными средствами, движущимися на высоких скоростях. 
 Особенностью технологии является небольшой радиус действия одного передающего устройства --- от шестисот метров до полутора километров в области прямой радиовидимости. Объединение всех устройств в единую сеть обеспечивает непрерывное соединение транспортного средства с дорожной инфраструктурой. 
 
 %выкинуть?
 %Сеть состоит из соединённых каналами связи стационарных устройств и мобильных приёмо--передатчиков, установленных на транспортных средствах. Все активные приёмо--передатчики формируют самоорганизующуюся одноранговую mesh--сеть. Наличие сети стационарных устройств и непрерывного соединения транспортных средств между собой создаёт предпосылки использования технологии DSRC в качестве средства доставки коротких сообщений в корпоративные и общегосударственные облачные среды, такие как ЭРА--ГЛОНАС или E--call. В этом случае mesh--сеть, организованная на основе DSRC технологии, является транспортом для передачи коротких высокоприоритетных сообщений указанных систем. Тогда, при срабатывании в автомобиле системы экстренного вызова сообщение ретранслируется не только по выделенному каналу связи, ассоциированному с системами ЭРА-ГЛОНАСС и E-Call, таким как LTE или 3G, но и по mesh-сети до ближайшего устройства дорожной инфраструктуры, которое в свою очередь ретранслирует его в центр обработки сообщений указанных систем. На рисунке~\ref{fig:ERA_GLONASS} показаны возможные траектории передачи сообщений: штатными средствами систем ЭРА-ГЛОНАСС и E-CALL, непосредственно техническим средствам дорожной инфраструктуры (V2I), или ретрансляция сообщения через другие автотранспортные средства до элементов дорожной инфраструктуры или другого транспортного средства с оборудованием ЭРА-ГЛОНАСС. Одновременная передача сообщения тремя способами через две независимые сети существенно сократит время доставки сообщения и повысит вероятность его доведения.
- 
-\begin{figure}[!ht]
-% \vspace{-0.2cm}
- \centering{
- \epsfig{file = ERA_GLONASS.eps, width = 8cm}
- \caption{Траектории передачи сообщений в мультипротокольной мобильной сети.}
- \label{fig:ERA_GLONASS}}
-% \vspace{-0.1cm}
-\end{figure}
-
