Исправлена аннотация и реферат

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -126,9 +126,17 @@
 
 \noindent {\it Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} {\bf Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}\\
 {\bf Аннотация.} 
-Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть, позволяющую повысить безопасность и комфорт передвижения абонентов сети. Особенностью автомобильных сетей передачи данных является динамически изменяемая топология, что определяет наличие множества различных путей доставки информационных сообщений. Проблемой обеспечения информационного обмена может стать отсутствие непрерывно существующего выделенного беспроводного канала связи. Решением, позволяющим улучшить качество передачи данных, становится реализация сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных.\\
+Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть, сервисы которой, позволяют повысить безопасность и комфорт передвижения абонентов сети.  
+
+Проблемой обеспечения информационного обмена является отсутствие непрерывно существующего выделенного беспроводного канала связи.
+
+Предложено решение, позволяющее увеличить время доступности сетевых сервисов, применением mesh сети с использованием мультипротокольного сетевого интерфейса, обеспечивающего передачу экстренных сообщений средствами доступных сетей передачи данных.
+
+Сформирована модель передачи сообшений ...
+
+В статье проанализированы результаты моделирования времени доступности облачных сервисов обмена экстренными сообщениями в различных конфигурациях автомобильной mesh сети, свойств сетевого трафика и особенностей организации дорожного движения. \\
 {\bf Ключевые слова:}
-автомобильные сервисы, автомобильные сети, mesh, 802.11s, LTE, IDM, облачные сервисы, мультипротокольный узел, протоколы передачи данных, протоколы маршрутизации, имитационное моделирование, ns--3.
+автомобильные сервисы, mesh, 802.11s, LTE, IDM, облачные сервисы, мультипротокольный узел, протоколы передачи данных, протоколы маршрутизации, имитационное моделирование, ns--3.
 
 \vskip 2mm
 
