--- a/summary.tex
+++ b/summary.tex
@@ -6,20 +6,26 @@
 
 \end{center}
 
-{\em Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} \textbf{Исследование доступности сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}
+{\em Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} \textbf{Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}
 
 {\small
-Эксплуатация современного автомобиля тесно связана с использованием разобщённых информационных ресурсов. Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть. Целью создания такой сети являются повышение безопасности и комфорта участников дорожного движения.
+Эксплуатация современного автомобиля тесно связана с использованием разобщённых информационных ресурсов, предоставляющих водителю и пассажирам разнообразные услуги и сервисы. 
+
+Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть. Целью создания такой сети являются повышение безопасности и комфорта участников дорожного движения.
 
 Обмен информационными сообщениями между автомобилем и облачной средой осуществляется через выделенный канал связи. Посредством этого обмена, облачная среда осуществляет сбор статистических данных, как о конкретных автомобилях, так и о дорожной обстановке, конечные пользователи получают доступ к службам экстренной помощи, информационным, справочным и развлекательным ресурсам.
 
-Проблемой доступа к сервисам облачной среды становится отсутствие непрерывно существующего выделенного беспроводного канала связи, что приводит к отказу обслуживания или необходимости использования альтернативных каналов связи. Канал передачи данных организуется при помощи автомобильных телематических устройств или персональных коммуникационных устройств пользователя.
+Проблемой доступа к сервисам облачной среды становится отсутствие непрерывно существующего выделенного беспроводного канала связи, что приводит к отказу обслуживания или необходимости использования альтернативных каналов связи. 
 
-Решением, позволяющим улучшить качество доступа к сервисам облачной среды, является применение mesh сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных. Особенностью mesh сетей является динамически изменяемая топология и отсутствие априорной информации о расположении точек доступа к облачной среде, что определяет наличие множества различных путей доставки информационных сообщений.
+Канал передачи данных организуется при помощи автомобильных телематических устройств или персональных устройств пользователя, таких как смартфоны, лэптопы и общедоступные сотовые сети передачи данных.
 
-Основным средством исследования поведения mesh сетей является имитационное моделирование, позволяющее выполнять различные сценарии поведения mesh сетей, не прибегая к реализации натурного эксперимента. В рамках данной работы была разработана модель автомобильной mesh сети, реализованной на основе модели движения транспорта IDM средствами симулятора компьютерных сетей ns--3.
+Решением, позволяющим улучшить качество доступа к сервисам облачной среды, является применение mesh сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных.
 
-Результатом представленной работы стала серия экспериментов, позволяющих оценить поведения автомобильных mesh сетей в зависимости от свойств сетевого трафика, характеристик дорожной сети и особенностей организации дорожного движения.
+Особенностью mesh сетей является динамически изменяемая топология и отсутствие априорной информации о расположении точек доступа к облачной среде, что определяет возможное наличие множества различных путей доставки информационных сообщений.
+
+Основным средством исследования поведения mesh сетей является имитационное моделирование, позволяющее выполнять различные сценарии поведения mesh сетей, не прибегая к реализации натурного эксперимента. В рамках данной работы была разработана модель автомобильной mesh сети, реализованной на основе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3.
+
+Анализ результатов моделирования показал что применение автомобильной mesh сети существенно повышает время доступности облачных сервисов обмена экстренными сообщениями в различных конфигурациях автомобильной mesh сети,свойств сетевого трафика и особенностей организации дорожного движения.
 }
 
 \newpage
