--- a/article_IP.tex
+++ b/article_IP.tex
@@ -157,28 +157,25 @@ Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, 
 %\section{Введение}
 \input{intro.tex}
 
-%\section{Автомобильные телекоммуникационные сервисы}%Сергей
+%\section{Автомобильные телекоммуникационные сервисы}
 \input{auto.tex}
 
-%\section{Телематические технологии доступа к сервисам}%Лёня и Вадик
-%Вторая часть: какие технологии есть сегодня для обеспечения сервисов (кусок из роада)
+%\section{Телематические технологии доступа к сервисам}
 \input{telematics.tex}
 
-%\section{Облачно--ориентированная избыточная мультипротокольная сеть}%Лёня и Вадик
-%Третья часть: что мы нового предложили. Многопротокольность, облачноориентированность и избыточность с картинками
+%\section{Облачно--ориентированная избыточная мультипротокольная сеть}
 \input{cloud.tex}
 
-% \section{Реализация среды моделирования передачи сообщений в сети автомобилей}%Вадик
-%Среда моделирования ns-3
+% \section{Реализация среды моделирования передачи сообщений в сети автомобилей}
 \input{implementation.tex}
 
-%\section{Исследование (?)}%Лёня
+%\section{Исследование}
 \input{research.tex}
 
-%\section{Заключение}%Серёжа и все
+%\section{Заключение}
 \input{conclusion.tex}
 
-%\section{Литература}%Серёжа
+%\section{Литература}
 \input{biblio.tex}
 
 %сведения об авторах
