без комментариев в тексте, с поправленными выводами и неточной анотацией

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -73,7 +73,7 @@
 \def\baselinestretch{1.00} 
 
 % название и авторы без автоматического формирования заголовка
-\title{Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей}
+\title{Исследование доступности сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей}
 
 \author{Глазунов В.В., Курочкин Л.М., Курочкин М.А., Попов С.Г.}
 
@@ -132,7 +132,7 @@
 
 Предложено решение, позволяющее увеличить время доступности сетевых сервисов, применением mesh сети с использованием мультипротокольного сетевого интерфейса, обеспечивающего передачу экстренных сообщений средствами доступных сетей передачи данных.
 
-Сформирована модель передачи сообшений ...
+Сформирована модель передачи сообщений, увеличивающая вероятность доставки экстренных сообщений. 
 
 В статье проанализированы результаты моделирования времени доступности облачных сервисов обмена экстренными сообщениями в различных конфигурациях автомобильной mesh сети, свойств сетевого трафика и особенностей организации дорожного движения. \\
 {\bf Ключевые слова:}
