--- a/auto.tex
+++ b/auto.tex
@@ -17,82 +17,49 @@
 
 \end{enumerate}
 
-% Реализация этих возможностей создаёт дополнительные удобства водителям и пассажирам автомобилей и п.
-%Новые возможности реализуются в среде облачных вычислений с использованием беспроводного подключения встроенного оборудования к облачной среде.
 
 {\bf{\SetMySubSection} Категории абонентов информационных услуг.} Потребителями информационных услуг подразделяются на несколько категорий абонентов, в первую категорию попадают облачные службы, предоставляющие непосредственно услуги водителям, во вторую - сами участники движения: водители и пассажиры автомобилей, в третью - элементы дорожной инфраструктуры и специальные транспортные средства. 
 
-%\begin{itemize}
 
-%\item[$-$] автомобиль (VIN);
-
-%\item аналитический центр;
-
-%\item водитель (владелец автомобиля);
-
-%\item водители автомобилей;
-
-%\item пассажиры автомобилей;
-
-%\item региональные службы управления движением;
-
-%\item сервисные центры;
-
-%\item службы помощи на дорогах;
-
-%\item специальные транспортные средства;
-
-%\item спецслужбы;
-
-%\item элементы <<умной>> дороги.
-
-%\end{itemize}
 
 {\bf{\SetMySubSection}Набор функций для пользователей информационных услуг.} Телематические услуги предоставляемые различным категориям абонентов:
 
 \begin{itemize}
 
 \item[$-$] Сообщение о погодных условиях и состоянии дорожного покрытия. 
-%В данном случае в облачную среду (облако) и напрямую водителям, передаются данные о температуре, влажности и давлении --- эти данные собираются с датчиков бортовой системы.
 
-\item[$-$] Оперативные изменения в транспортной сети. %Из облака, передаются оперативные данные о: перекрытии дорог, изменении числа полос и рядности движения, изменении скоростного режима, неработающих светофоры, пробки, ДТП. Источником этих данных являются дорожные службы, службы типа <<Яндекс.Пробки>> и непосредственно водители. 
+
+\item[$-$] Оперативные изменения в транспортной сети.
 
 \item[$-$] Сообщение о правилах регулирования дорожного движения. 
-%Действующие знаки, светофоры, приближение транспортных средств с особым режимом движения: скорая, пожарная службы.
-%Данные приходят от других транспортных средств, а также непосредственно от самих элементов дорожной сети (<<умная>> дорога).
+
 
 \item[$-$] Сбор и отображение данных о местоположении автомобилей других участников движения. 
 
-\item[$-$] Автоматическое сохранение треков движения транспортного средства с видеофиксацией ключевых точек движения по времени или по событию. %Данные изначально хранятся локально и потом выгружаются в облако.
+\item[$-$] Автоматическое сохранение треков движения транспортного средства с видеофиксацией ключевых точек движения по времени или по событию.
 
-\item[$-$] Уточнение данных о дорожной обстановке в центре управления транспортными средствами. %Данные в центр обслуживания: голосовой канал связи с центром обслуживания и реагирования, будет предназначаться для помощи водителю на дорогах.
+\item[$-$] Уточнение данных о дорожной обстановке в центре управления транспортными средствами.
  
-%\item[$-$] Передача сообщений об аварийных ситуациях. Передаются координаты и код, сообщающий о категории аварийной ситуации. По возможности передается набор видеоданных, принимающей стороной этих данных является облако и все водители в ближайшем радиусе.
+
 
 \item[$-$] Автоматическая оплата услуг (дорог, парковок, топлива).
 
-\item[$-$] Отправка сообщений <<SOS>>.% автомобилям в определенном радиусе: <<кончился бензин>>, <<сел аккумулятор>>, <<спустило колесо, нет запасного>>, <<застрял, помогите выехать>>. Данные передаются напрямую другим автомобилям, либо транзитом через облако другим автомобилям, а также в службы помощи на дорогах: радиус рассылки сообщений необходимо формировать динамически на основе местоположения (город, отдаленный населенный пункт).
+\item[$-$] Отправка сообщений <<SOS>>.
 
-\item[$-$] Срабатывание датчиков охранного комплекса и/или угон автомобиля.% Отправка сведений всеми доступными способами с приложением фото--, видео-- и аудиоданных с внешних/внутренних камер и микрофонов.
+\item[$-$] Срабатывание датчиков охранного комплекса и/или угон автомобиля
 
 
-\item[$-$] Аудио и видео консультации водителя о техническом состоянии автомобиля.% Из облака: поток аудио/видео данных между аналитическим центром и водителем. 
+\item[$-$] Аудио и видео консультации водителя о техническом состоянии автомобиля
 
-\item[$-$] Дистанционный сбор данных об отказах и сбоях оборудования.% В облако: периодически отсылает текущее состояние с датчиков автомобиля, а также статистические данные за весь период эксплуатации автомобиля, в этих данных также отображаются аварийные ситуации произошедшие с опрашиваемым оборудованием. 
+\item[$-$] Дистанционный сбор данных об отказах и сбоях оборудования
 
 \item[$-$] Дистанционная загрузка новых версий программного обеспечения, учитывающего особенности эксплуатации конкретного автомобиля.
 
 
 \item[$-$] Дистанционное управление агрегатами автомобиля: двигатель, трансмиссия, устройства освещения. 
 
-%\item[$-$] Сообщения о необходимости прохождении технических осмотров или срочного ремонта. Из облака: информационное сообщение для водителя, напоминающее о необходимости прохождения ТО, либо замене какого-либо компонента в автомобиле. Пользователю может быть отправлена информация о ближайших сервисных центрах, в которые могут быть доставлены требуемые замены компоненты, а также ориентировочное время доставки этих компонентов. 
-
-%\item[$-$] Централизованный сбор и хранение данных об особых событиях в автомобиле: открытие кузова, заправка или слив топлива, длительная стоянка.
 
 
-%\item[$-$] Контроль качества выполнения сервисного обслуживания. В облако отправляются данные о состоянии датчиков автомобиля после сервисного обслуживания. Служит для контроля качества выполнения работ в официальном сервисном центре производителем.
-
-%\item[$-$] Статистическая информация о пропускной способности канала передачи данных в разных частях дорожной сети.
 
 \item[$-$] Телекоммуникационная среда для пассажиров автомобилей. В данную услугу входят такие сервисы, как: 
 
@@ -100,7 +67,7 @@
 
 \item[$-$] Подключение к удалённым сервисам через мобильную сеть (личная электронная почта, социальные сети, блоги, микросообщения).
 
-\item[$-$] Организация виртуальной локальной сети между автомобилями с целью передачи речи и видеопотока% (<<виртуальный автобус>>, видеоигры, общение в общем видеочате).
+\item[$-$] Организация виртуальной локальной сети между автомобилями с целью передачи речи и видеопотока.
 
 \item[$-$] Доступ в глобальную сеть.
 
