--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,30 +1,19 @@
-{\bf{\SetMySection} Заключение.} Современные тенденции  расширения спектра информационных услуг формируют новые задачи позволяющие улучшить качество доступа к подвижным сетям передачи данных. В результате:
+{\bf{\SetMySection} Заключение.} Современные тенденции  расширения спектра информационных услуг формируют новые задачи позволяющие требующие увеличения времени доступности сетевых облачных сервисов. В результате :
 
 \begin{itemize}
 
 \item[$-$] Поставлена актуальная задача исследования поведения мобильной беспроводной сети передачи данных на основе 802.11s, LTE в направлении использования сервисов облачной среды;
 
-\item[$-$] Разработана модель беспроводной сети передачи данных, на основании интеллектуальной модели движения транспорта (IDM), отличающаяся от аналогов наличием мульти-протокольных узлов, обеспечивающих взаимодействие сетей 802.11s, LTE и облачной среды;
+\item[$-$] Разработана имитационная модель беспроводной сети передачи данных, на основании интеллектуальной модели движения транспорта (IDM), отличающаяся от аналогов наличием мультипротокольных узлов, обеспечивающих взаимодействие сетей 802.11s, LTE и облачной среды;
 
 \item[$-$] Выбраны набор параметров и область их значений: протоколы маршрутизации, интенсивность трафика данных, количество узлов сети и т.д., позволяющие исследовать периоды наибольших изменений структуры и состояния мобильной беспроводной сети передачи данных;
 
 \item[$-$] Получены оценки уровня надёжности передачи данных; реальной скорости передачи данных, обеспечиваемых сетью и среднего времени обмена сообщениями узла сети с облачной средой.
 
-\end{itemize}
-
-
-Результаты проведённой работы:
-
-\begin{itemize}
-
-\item[$-$] архитектура среды моделирования mesh-сети развёрнутой в экстремальных условиях, основанной на использовании мультипротокольных узлов;
-
-\item[$-$] разработана модель мультипротокольного узла в среде ns-3. Созданая модель обеспечивает маршрутизацию между доступными сетевыми интерфейсами;
-
-\item[$-$] технология моделирования высоконадежных сетей с произвольной комбинацией протоколов: 802.11s, 802.11p, 802.11abg, LTE; 
-
-\item[$-$] разработана среда моделирования mesh на базе ns-3. Полученная среда моделирования позволяет произвести оценки работы сетевых узлов (абонентов).
+\item[$-$] Средствами дискретно-событийного симулятора ns-3 разработана модель мультипротокольного узла. Созданная модель обеспечивает маршрутизацию между доступными сетевыми интерфейсами и позволяет реализовывать сценарии моделирования автомобильных mesh сетей с произвольной комбинацией протоколов: 802.11s, 802.11p, 802.11abg, LTE; 
 
 \end{itemize}
 
-%В рамках продолжения исследований планируется провести детальное исследование временных характеристик, проанализировать возможность построения оптимальных маршрутов пересылки сообщений между узлом сети и облачной средой, на основании исследований разработать универсальный протокол маршрутизации для мультипротокольной облачно-ориентированной MESH сети автомобилей.
+
+
+
